name:                ln-api-runner
version:             0.1.0.0
synopsis:            Test LN API
description:         Please see README.md
homepage:            https://github.com/adarqui/ln-api-runner#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
copyright:           2016 Andrew Darqui
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LN.Api.Runner
                     , LN.Api.Runner.Api
                     , LN.Api.Runner.Assert
                     , LN.Api.Runner.Control
                     , LN.Api.Runner.Launch
                     , LN.Api.Runner.Internal
                     , LN.Api.Runner.Print
                     , LN.Api.Runner.Organization
                     , LN.Api.Runner.User
                     , LN.Api.Runner.Forum
  build-depends:       base
                     , break
                     , bytestring
                     , containers
                     , either
                     , http-types
                     , mtl
                     , QuickCheck
                     , quickcheck-text
                     , rainbow
                     , statestack
                     , string-conversions
                     , tasty
                     , text
                     , transformers
                     , wreq
                     , text-icu
                     , text-regex-replace
                     , ln-api
                     , ln-types
                     , ln-validate
                     , ln-sanitize
                     , haskell-api-helpers
                     , haskell-rehtie
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010

executable ln-api-runner-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ln-api-runner
  default-language:    Haskell2010

test-suite ln-api-runner-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ln-api-runner
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adarqui/ln-api-runner
